<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2025 Philipp Hasper <vcs@hasper.info>
  ~ SPDX-FileCopyrightText: 2020-2023 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-FileCopyrightText: 2018 Nextcloud GmbH
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload_files_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_standard" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/list_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/bg_default"
            android:divider="@color/transparent"
            android:dividerHeight="0dip"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="UnusedAttribute" />

        <include
            android:id="@+id/empty_view"
            layout="@layout/empty_list" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:hint="@string/hint_name"
        android:paddingTop="@dimen/standard_half_margin"
        android:paddingStart="@dimen/standard_half_margin"
        android:paddingEnd="@dimen/standard_half_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textCapSentences"
            android:scrollbars="vertical"
            android:nextFocusForward="@id/uploader_choose_folder"
            android:nextFocusDown="@id/uploader_choose_folder"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploader_cancel"
            style="@style/OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_half_margin"
            android:layout_weight="1"
            android:text="@string/common_cancel"
            app:cornerRadius="@dimen/button_corner_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploader_choose_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_half_margin"
            android:layout_weight="1"
            android:text="@string/uploader_btn_upload_text"
            android:theme="@style/Button.Primary"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

</LinearLayout>
