<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ IONOS HiDrive Next - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2025 STRATO GmbH.
  ~ SPDX-License-Identifier: GPL-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.ToolbarTheme"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/default_icon_color"
        app:title="@string/ionos_data_protection_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/ionos_data_protection_screen_padding">

        <include
            android:id="@+id/switchers"
            layout="@layout/settings_privacy_switchers" />

    </ScrollView>

</LinearLayout>
