...
  License along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
...
